--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-GoodGym
+<!DOCTYPE html>
+<html>
+<head>
+<title>Good Gym</title>
+  </head>
+<body>
+ 
+    <img class="logo" src="https://www.goodgym.org/assets/50_gg_logo-89e89c1f51a9fb22d69fb6646f1faf25.png"/>
+ 
+
+  <h1 class="About">About Us</h1>
+
+  <h1 class="Headings"> Our Story So far</h1>
+  <p class="Storyp">GoodGym arose out of a frustration with normal gyms being a waste of energy and human potential. After a year or so of thinking, testing and developing ideas the project was submitted to Social Innovation Camp in December 2008. The project was rapidly developed by a wonderful team of people and won first prize. Following this, GoodGym grew a steering group and put together a pilot project to prove the concept and its potential impact in Tower Hamlets. In September 2009 we formed as a Company Limited by Guarantee (a not-for-profit company) and in Autumn 2010 GoodGym was part of the first iteration of <a href="https://bethnalgreenventures.com">Bethnal Green Ventures</a>. We've been sort of following the <a href="https://en.wikipedia.org/wiki/Lean_startup">lean startup</a> methodology, continually working on improvements to what we do. From January 2012, we worked with the London Legacy Development Company to expand the project to the boroughs surrounding the Olympic Park, and from mid-2012 we worked with <a href="http://www.nesta.org.uk">Nesta</a> to develop our platform, to improve the experience of our members and to expand to new areas. 2013 saw us expand to Camden and Bristol and we started working with professional trainers and running coaches. Over 2013 and 2014 we've increasingly started to rely on <a href="https://mydonate.bt.com/charities/goodgym">donations</a> from our runners to cover our costs and our work, preventing loneliness and isolation, and promoting fitness, we began to be commissioned by local authorities and the NHS. In 2014 we started operating in Lambeth, Westminster and Newham, and in January 2015 we launched in Islington and Brent.</p>
+  
+  <h1 class="Headings"> What exactly does Goodgym do?</h1>
+  <div class="storyp">
+  <p> We do three things:</p>
+  <ol type="123" class="list">
+    <li>We run in groups to do manual labour for community organisations.
+ </li>
+    <li>We run to make social visits to isolated older people who we call our 'coaches' because they motivate us to keep going.</li>
+    <li>We run missions for older people; clearing gardens, changing lightbulbs and doing odd-jobs for people who struggle to do them alone.</li>
+  </ol>
+  <p>We are supported by some of the best personal trainers and running coaches in the UK. They come on our group sessions and help us keep our fitness and technique on track.</p>
+  </div>
+ 
+  
+  
+</body>
+</html>
