--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Good Gym</title>
+  <link href="style.css" type="text/css" rel="stylesheet">
   </head>
+  
 <body>
  
     <img class="logo" src="https://www.goodgym.org/assets/50_gg_logo-89e89c1f51a9fb22d69fb6646f1faf25.png"/>
