--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Good Gym</title>
+  <head>
+    <title>Good Gym</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
   </head>
 <body>
  
