--- a/index.html
+++ b/index.html
@@ -56,13 +56,20 @@ We want to rival the success of gyms, getting people all over the world off trea
   
   <H2 class="headings">Supporters and Partners</H2>
   <p class="storyp">GoodGym is supported by Big Lottery Fund and Nesta</p>
+  <a href="http://www.nesta.org.uk">
   <img id="Nesta" src="http://www.anothercrowd.com/sites/default/files/nesta-logo.jpg"/>
+  </a>
+  <a href="https://www.biglotteryfund.org.uk">
   <img id="BLF" src="http://cached.imagescaler.hbpl.co.uk/resize/scaleWidth/580/offlinehbpl.hbpl.co.uk/news/NST/BLF-20151125041036682.jpg"/>
+  </a>
   <p class="storyp" id="SupportBT">GoodGym is supported by BT <br/><br/> BT is supporting our expansion and is committed to using the power of communications to make a better world. Together we aim to make the UK a more connected, healthier place </p>
+  <a href="http://home.bt.com">
   <img id="BT" src="http://www.btplc.com/templates/images13/logo.png"/>
+  </a>
   <p class="storyp">GoodGym is supported by the leading athletic apparel company New Balance</p>
+  <a href="http://www.newbalance.co.uk">
   <img id="NB" src="https://i1.wp.com/hypebeast.com/image/2015/09/new-balance-n-logo-1.jpg?quality=95&w=1024"/>
-
+  </a>
  
   
   
