--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ As one person describes it: "With aging you lose a lot of friends. It's really s
 
 GoodGym makes a contribution to improving quality of life for older people. You can read stories about our runners and coaches here.</p>
   
-  <h2 class="headings">Making it easy to do good</h2>
+  <h2 class="Headings">Making it easy to do good</h2>
   <p class="storyp">Research by UK volunteering organisation <a class="links" href="http://timebank.org.uk">TimeBank</a> has shown the difficulty of recruiting volunteers, and highlights the importance of developing volunteer-centric roles for volunteering. GoodGym is a “fine grain” approach to volunteering, where participation is based on frequent low impact activities that are integrated usefully into our lives.
 
 GoodGym is a new model of voluntary action that focuses on our experiences as volunteers and runners. Because it fits into our lives it’s easier for us to commit for the longer term, it makes it easy for us to keep going.
@@ -49,12 +49,12 @@ Though what we’re doing on each run may only have a small impact, our ability 
 In gyms all over the country people all over Britain work away furiously; peddling, pushing, lifting, running and achieving no external benefits. GoodGym aims to harness this energy by making it easier for people to channel this energy towards social good. Read our experiences of GoodGym group runs and missions <a class="links" href="https://www.goodgym.org/run_reports/">here</a> and <a class="links" href="https://www.goodgym.org/case_studies">visits to older people</a>
 </p>
   
-  <h2 class="headings">What's the plan?</h2>
+  <h2 class="Headings">What's the plan?</h2>
   <p class="storyp">GoodGym is now open to everyone in Barnet, Bath, Bournemouth, Brent, Bristol, Camden, Chelmsford, Colchester, Croydon, Ealing, Greenwich, Hackney, Hammersmith and Fulham, Haringey, Hounslow, Islington, Lambeth, Lewisham, Newham, Redbridge, Richmond, Sheffield, Southwark, Tower Hamlets, Wandsworth, Westminster and we have hundreds of people interested in setting up GoodGym in their area. We are aiming to launch a further 10-20 areas by the end of 2016.
 
 We want to rival the success of gyms, getting people all over the world off treadmills and into their communities. We are always looking for brilliant people to work with; if you want to get in touch about setting up GoodGym where you are go to goodgym.org/proposals/[insertyourareaname] - if the page doesn’t exist, email us at: <a class="links" href="mailto:getinvolved@goodgym.org">getinvolved@goodgym.org</a></p>
   
-  <H2 class="headings">Supporters and Partners</H2>
+  <H2 class="Headings">Supporters and Partners</H2>
   <p class="storyp">GoodGym is supported by Big Lottery Fund and Nesta</p>
   <a href="http://www.nesta.org.uk">
   <img id="Nesta" src="http://www.anothercrowd.com/sites/default/files/nesta-logo.jpg"/>
