--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p class="Storyp">GoodGym arose out of a frustration with normal gyms being a waste of energy and human potential. After a year or so of thinking, testing and developing ideas the project was submitted to Social Innovation Camp in December 2008. The project was rapidly developed by a wonderful team of people and won first prize. Following this, GoodGym grew a steering group and put together a pilot project to prove the concept and its potential impact in Tower Hamlets. In September 2009 we formed as a Company Limited by Guarantee (a not-for-profit company) and in Autumn 2010 GoodGym was part of the first iteration of <a class="links" href="https://bethnalgreenventures.com">Bethnal Green Ventures</a>. We've been sort of following the <a class="links" href="https://en.wikipedia.org/wiki/Lean_startup">lean startup</a> methodology, continually working on improvements to what we do. From January 2012, we worked with the London Legacy Development Company to expand the project to the boroughs surrounding the Olympic Park, and from mid-2012 we worked with <a class="links" href="http://www.nesta.org.uk">Nesta</a> to develop our platform, to improve the experience of our members and to expand to new areas. 2013 saw us expand to Camden and Bristol and we started working with professional trainers and running coaches. Over 2013 and 2014 we've increasingly started to rely on <a class="links" href="https://mydonate.bt.com/charities/goodgym">donations</a> from our runners to cover our costs and our work, preventing loneliness and isolation, and promoting fitness, we began to be commissioned by local authorities and the NHS. In 2014 we started operating in Lambeth, Westminster and Newham, and in January 2015 we launched in Islington and Brent.</p>
   
   <h2 class="Headings"> What exactly does Goodgym do?</h2>
-  <div class="storyp">
+  <div class="Storyp">
   <p> We do three things:</p>
   <ol type="123" class="list">
     <li>We run in groups to do manual labour for community organisations.
@@ -31,7 +31,7 @@
   </div>
   
   <h2 class="Headings">Why are we doing it?</h2>
-  <p class="storyp">We think that gyms are a waste of energy. There are many neglected tasks and people in our communities that need that energy. We want to bring these things together.
+  <p class="Storyp">We think that gyms are a waste of energy. There are many neglected tasks and people in our communities that need that energy. We want to bring these things together.
 
 Something we've been working on a lot is loneliness and isolation amongst older people: over  <a class="links" href="http://www.ageuk.org.uk/latest-news/archive/1-million-older-people-feel-lonely/">1 million</a> people aged 65 and over admit to always or often feeling lonely, and <a class="links" href="http://www.campaigntoendloneliness.org/loneliness-research/"> 17% </a> of those living alone see family and friends less than once a week.
 
@@ -40,7 +40,7 @@ As one person describes it: "With aging you lose a lot of friends. It's really s
 GoodGym makes a contribution to improving quality of life for older people. You can read stories about our runners and coaches here.</p>
   
   <h2 class="Headings">Making it easy to do good</h2>
-  <p class="storyp">Research by UK volunteering organisation <a class="links" href="http://timebank.org.uk">TimeBank</a> has shown the difficulty of recruiting volunteers, and highlights the importance of developing volunteer-centric roles for volunteering. GoodGym is a “fine grain” approach to volunteering, where participation is based on frequent low impact activities that are integrated usefully into our lives.
+  <p class="Storyp">Research by UK volunteering organisation <a class="links" href="http://timebank.org.uk">TimeBank</a> has shown the difficulty of recruiting volunteers, and highlights the importance of developing volunteer-centric roles for volunteering. GoodGym is a “fine grain” approach to volunteering, where participation is based on frequent low impact activities that are integrated usefully into our lives.
 
 GoodGym is a new model of voluntary action that focuses on our experiences as volunteers and runners. Because it fits into our lives it’s easier for us to commit for the longer term, it makes it easy for us to keep going.
 
@@ -50,23 +50,23 @@ In gyms all over the country people all over Britain work away furiously; peddli
 </p>
   
   <h2 class="Headings">What's the plan?</h2>
-  <p class="storyp">GoodGym is now open to everyone in Barnet, Bath, Bournemouth, Brent, Bristol, Camden, Chelmsford, Colchester, Croydon, Ealing, Greenwich, Hackney, Hammersmith and Fulham, Haringey, Hounslow, Islington, Lambeth, Lewisham, Newham, Redbridge, Richmond, Sheffield, Southwark, Tower Hamlets, Wandsworth, Westminster and we have hundreds of people interested in setting up GoodGym in their area. We are aiming to launch a further 10-20 areas by the end of 2016.
+  <p class="Storyp">GoodGym is now open to everyone in Barnet, Bath, Bournemouth, Brent, Bristol, Camden, Chelmsford, Colchester, Croydon, Ealing, Greenwich, Hackney, Hammersmith and Fulham, Haringey, Hounslow, Islington, Lambeth, Lewisham, Newham, Redbridge, Richmond, Sheffield, Southwark, Tower Hamlets, Wandsworth, Westminster and we have hundreds of people interested in setting up GoodGym in their area. We are aiming to launch a further 10-20 areas by the end of 2016.
 
 We want to rival the success of gyms, getting people all over the world off treadmills and into their communities. We are always looking for brilliant people to work with; if you want to get in touch about setting up GoodGym where you are go to goodgym.org/proposals/[insertyourareaname] - if the page doesn’t exist, email us at: <a class="links" href="mailto:getinvolved@goodgym.org">getinvolved@goodgym.org</a></p>
   
   <H2 class="Headings">Supporters and Partners</H2>
-  <p class="storyp">GoodGym is supported by Big Lottery Fund and Nesta</p>
+  <p class="Storyp">GoodGym is supported by Big Lottery Fund and Nesta</p>
   <a href="http://www.nesta.org.uk">
   <img id="Nesta" src="http://www.anothercrowd.com/sites/default/files/nesta-logo.jpg"/>
   </a>
   <a href="https://www.biglotteryfund.org.uk">
   <img id="BLF" src="http://cached.imagescaler.hbpl.co.uk/resize/scaleWidth/580/offlinehbpl.hbpl.co.uk/news/NST/BLF-20151125041036682.jpg"/>
   </a>
-  <p class="storyp" id="SupportBT">GoodGym is supported by BT <br/><br/> BT is supporting our expansion and is committed to using the power of communications to make a better world. Together we aim to make the UK a more connected, healthier place </p>
+  <p class="Storyp" id="SupportBT">GoodGym is supported by BT <br/><br/> BT is supporting our expansion and is committed to using the power of communications to make a better world. Together we aim to make the UK a more connected, healthier place </p>
   <a href="http://home.bt.com">
   <img id="BT" src="http://www.btplc.com/templates/images13/logo.png"/>
   </a>
-  <p class="storyp">GoodGym is supported by the leading athletic apparel company New Balance</p>
+  <p class="Storyp">GoodGym is supported by the leading athletic apparel company New Balance</p>
   <a href="http://www.newbalance.co.uk">
   <img id="NB" src="https://i1.wp.com/hypebeast.com/image/2015/09/new-balance-n-logo-1.jpg?quality=95&w=1024"/>
   </a>
