--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </ul>
 
   <h1 id="About">About Us</h1>
-
+<div class="MainBody">
   <h2 class="Headings"> Our Story So far</h2>
   <p class="Storyp">GoodGym arose out of a frustration with normal gyms being a waste of energy and human potential. After a year or so of thinking, testing and developing ideas the project was submitted to Social Innovation Camp in December 2008. The project was rapidly developed by a wonderful team of people and won first prize. Following this, GoodGym grew a steering group and put together a pilot project to prove the concept and its potential impact in Tower Hamlets. In September 2009 we formed as a Company Limited by Guarantee (a not-for-profit company) and in Autumn 2010 GoodGym was part of the first iteration of <a class="links" href="https://bethnalgreenventures.com">Bethnal Green Ventures</a>. We've been sort of following the <a class="links" href="https://en.wikipedia.org/wiki/Lean_startup">lean startup</a> methodology, continually working on improvements to what we do. From January 2012, we worked with the London Legacy Development Company to expand the project to the boroughs surrounding the Olympic Park, and from mid-2012 we worked with <a class="links" href="http://www.nesta.org.uk">Nesta</a> to develop our platform, to improve the experience of our members and to expand to new areas. 2013 saw us expand to Camden and Bristol and we started working with professional trainers and running coaches. Over 2013 and 2014 we've increasingly started to rely on <a class="links" href="https://mydonate.bt.com/charities/goodgym">donations</a> from our runners to cover our costs and our work, preventing loneliness and isolation, and promoting fitness, we began to be commissioned by local authorities and the NHS. In 2014 we started operating in Lambeth, Westminster and Newham, and in January 2015 we launched in Islington and Brent.</p>
   
@@ -70,7 +70,7 @@ We want to rival the success of gyms, getting people all over the world off trea
   <a href="http://www.newbalance.co.uk" target="_blank">
   <img id="NB" src="https://i1.wp.com/hypebeast.com/image/2015/09/new-balance-n-logo-1.jpg?quality=95&w=1024"/>
   </a>
- 
+</div> 
   
   
 </body>
