--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" type="text/css" rel="stylesheet">
   </head>
 <body>
- 
+  <img src="https://unsplash.com/?photo=BL1ipcOKmmE">
   <ul id="navbar">
     <img class="logo" src="https://www.goodgym.org/assets/50_gg_logo-89e89c1f51a9fb22d69fb6646f1faf25.png"/>
     <li><a class="nav1" href="https://www.goodgym.org/login?notice=Please+sign+in+or+register+first.&return_path=https%3A%2F%2Fwww.goodgym.org%2Fhappenings">Events</a></li>
